[package]
name = "gd-icon-renderer"
description = "A tool to render Geometry Dash icons."
version = "1.0.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://git.reidlab.online/reidlab/gd-icon-renderer"

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
maplit = "1.0.2"
plist = "1.5.0"
